# the-evil-repository

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DESIGN.zh-CN.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  compose.yaml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  credentials.py  crypto.py  database.py  events.py  investigation.py  judging.py  main.py  model_discovery.py  model_identity.py  model_parameters.py  models.py  platform.py  run_outcomes.py  schemas.py  scoring.py  security.py  seed.py  telemetry.py  worker.py
apps/api/app/api/: admin.py  auth.py  credentials.py  dashboard.py  model_profiles.py  reports.py  runs.py  suites.py  tasks.py
apps/api/app/challenge/: __init__.py  (+5 more)
apps/api/scripts/: release_sandbox_smoke.py  sandbox_smoke.py
apps/api/tests/: test_agent_graph.py  test_auth_api.py  test_challenge_generation.py  test_counterfeit_release_scenario.py  test_credentials.py  test_crypto.py  test_database_migrations.py  test_deploy_safety.py  test_engine.py  test_faults.py  test_incident_director.py  test_judging.py  test_model_discovery.py  test_model_profiles.py  test_providers.py  test_release_director.py  test_reports.py  test_run_archival.py  test_run_artifacts.py  test_run_control.py  test_run_outcomes.py  test_sandbox_policy.py  test_scenario_sdk.py  test_scoring.py  test_security.py  test_seed.py  test_suite_and_truth_graph.py  test_telemetry.py  test_worker.py
(+96 files in other folders)
