[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evil-repository-api"
version = "0.6.0"
description = "Control plane and isolated runner for The Evil Repository benchmark."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
dependencies = [
  "cryptography>=45.0.0",
  "docker>=7.1.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.0",
  "pyyaml>=6.0.2",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
